name:                silly-containers
version:             0.1.0.0
synopsis:
  Silly containers
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:
  README.md
  CHANGELOG.md

library
  default-language:
    Haskell2010
  build-depends:
      base >= 4.6
    , lens >= 4
  hs-source-dirs:
    src
  exposed-modules:
    Data.Meep

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  build-depends:
      base >= 4.6
    , hspec
    , lens
    , QuickCheck
  hs-source-dirs:
    src
    test
  main-is:
    Spec.hs
  other-modules:
    Data.MeepSpec
  cpp-options:
    -DTEST
